--- a/public/styles.css
+++ b/public/styles.css
@@ -20,7 +20,7 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-    border: none;
+    border: 3px solid black;
     box-sizing: border-box;
     border-radius: 20px;
     height: auto;
