--- a/public/styles.css
+++ b/public/styles.css
@@ -13,16 +13,28 @@ body {
     border: 3px solid black;
     box-sizing: border-box;
     border-radius: 20px;
-    height: 450px;
+    height: auto;
     width: 40%;
     gap: 5px;
     padding: 15px;
     margin: 10px 0;
-    border-radius: 8px;
     background-color: white;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
+@media (max-width: 600px) {
+ .planned-alerts-layout > div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    border: 3px solid black;
+    box-sizing: border-box;
+    height: auto;
+    width: 85%;
+    background-color: white;
+    border-radius: 8px;
+    }
+}
 /* NB: DO NOT FORGET TO SET MEDIA QUERIES EARLY */
 
 .planned-alert-card {
