--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,6 @@ body {
     font-family: Verdana;
 }
 
-#CWW-header {
-    text-align: center;
-}
 
 .planned-alerts-layout > div {
     display: grid;
@@ -50,6 +47,11 @@ body {
 
 }
 
+#enable-notifications {
+    cursor: pointer;
+    margin-bottom: 40px;
+}
+
 #area-search-filter {
     display: grid;
     justify-items: center;
@@ -70,7 +72,3 @@ body {
     
 }
 
-#install-btn {
-    cursor: pointer;
-    margin-bottom: 40px;
-}
